--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ github_username: jekyll
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-minimal
 plugins:
   - jekyll-feed
 # Exclude from processing.
