Add custom layout and collection

--- a/_config.yml
+++ b/_config.yml
@@ -10,3 +10,8 @@ plugins:
   - jekyll-feed
   - github-pages
   - jekyll-theme-minimal
+
+collections_dir: collections
+collections:
+  people:
+    output: true
