--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Dumchenko graveyard
+title: Место упокоения семьи Думченко
 domain: dumchenko.github.io
 baseurl: "/graveyard" # the subpath of your site, e.g. /blog
 url: "https://dumchenko.github.io" # the base hostname & protocol for your site, e.g. http://example.com
