--- a/.github/workflows/jekyll-deploy.yml
+++ b/.github/workflows/jekyll-deploy.yml
@@ -24,3 +24,4 @@ jobs:
           target_branch: "gh-pages"
           pre_build_commands: |
             apk --update add imagemagick
+            bundle update --bundler
