--- a/.github/workflows/jekyll-deploy.yml
+++ b/.github/workflows/jekyll-deploy.yml
@@ -13,6 +13,8 @@ jobs:
       pages: write
     steps:
       - uses: actions/checkout@v2
+        with:
+          lfs: true
 
       - uses: actions/cache@v2
         with:
