--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-*.jpeg filter=lfs diff=lfs merge=lfs -text
+assets/images/* filter=lfs diff=lfs merge=lfs -text
 public/images/* filter=lfs diff=lfs merge=lfs -text
