--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,6 @@
 {
   "files.associations": {
     "*.html": "jekyll",
-    "*.scss": "jekyll",
-    "*.md": "jekyll"
+    "*.scss": "jekyll"
   }
 }
