feat: use new domain

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Место упокоения семьи Думченко
-domain: dumchenko.github.io
-baseurl: "/graveyard" # the subpath of your site, e.g. /blog
-url: "https://dumchenko.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+domain: graveyard.dumchenko.family
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "https://graveyard.dumchenko.family" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 markdown: kramdown
