fix: do not freeze lockfile

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
           cache: yarn
 
       - name: Run install
-        run: yarn install --frozen-lockfile
+        run: yarn install
 
       - name: Build site
         run: yarn generate
