--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.19.1",
     "@nuxt/content": "^2.2.2",
+    "@nuxtjs/eslint-config": "^12.0.0",
+    "eslint": "^8.28.0",
     "nuxt": "^3.0.0"
   },
   "packageManager": "yarn@3.3.0",
