--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "@babel/eslint-parser": "^7.19.1",
     "@nuxt/content": "^2.2.2",
     "@nuxtjs/eslint-config": "^12.0.0",
-    "eslint": "^8.28.0",
-    "nuxt": "^3.0.0"
-  },
-  "packageManager": "yarn@3.3.0",
-  "dependencies": {
     "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/google-fonts": "^2.0.0",
+    "@nuxtjs/tailwindcss": "^6.1.3",
+    "@tailwindcss/typography": "^0.5.8",
+    "eslint": "^8.28.0",
+    "nuxt": "^3.0.0",
     "nuxt-purgecss": "^2.0.0",
     "sass": "^1.56.1",
-    "sass-loader": "^13.2.0"
-  }
+    "sass-loader": "^13.2.0",
+    "tailwindcss": "^3.2.4"
+  },
+  "packageManager": "yarn@3.3.0"
 }
