--- a/content/graves/vanyukova.yml
+++ b/content/graves/vanyukova.yml
@@ -5,3 +5,10 @@ buried:
   - name: Ванюкова Нина Александровна
     birthDate: 02.12.1934
     deathDate: 07.03.2018
+  - name: Игнатьев Александр Андреевич
+    birthDate: 15.06.1910
+    deathDate: 05.07.1976
+
+photos:
+  - path: 2022-12-02 14.08.17.jpg
+    caption: Рядом находится могила Игнатьева А.А.
