--- a/content/graves/vanyukova.yml
+++ b/content/graves/vanyukova.yml
@@ -10,5 +10,6 @@ buried:
     deathDate: 05.07.1976
 
 photos:
+  - path: 2022-12-02 14.41.26.jpg
   - path: 2022-12-02 14.08.17.jpg
     caption: Рядом находится могила Игнатьева А.А.
