--- a/package.json
+++ b/package.json
@@ -4,21 +4,27 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
+    "lint": "eslint --ext .ts,.js,.vue .",
     "preview": "nuxt preview"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.19.1",
     "@nuxt/content": "^2.2.2",
+    "@nuxt/image": "^0.7.1",
     "@nuxtjs/eslint-config": "^12.0.0",
+    "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/google-fonts": "^2.0.0",
     "@nuxtjs/tailwindcss": "^6.1.3",
     "@tailwindcss/typography": "^0.5.8",
-    "eslint": "^8.28.0",
+    "@typescript-eslint/eslint-plugin": "^5.46.0",
+    "@typescript-eslint/parser": "^5.46.0",
+    "eslint": "^8.29.0",
     "nuxt": "^3.0.0",
     "nuxt-purgecss": "^2.0.0",
     "sass": "^1.56.1",
     "sass-loader": "^13.2.0",
     "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.4",
     "vue": "^3.2.45",
     "vue-gtag": "^2.0.1"
   },
