--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,5 +21,8 @@ jobs:
       - name: Run install
         run: yarn install
 
+      - name: Build nuxt
+        run: yarn build
+
       - name: Run eslint
         run: yarn run lint
