--- a/content/graveyards/newwolf.yml
+++ b/content/graveyards/newwolf.yml
@@ -1,6 +1,4 @@
----
-name: Нововолковское кладбище
+title: Нововолковское кладбище
 maps:
     yandex: https://yandex.ru/map-widget/v1/-/CCU6vIbF1B
     google: https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2612.005594067883!2d30.35728381642311!3d59.882079331855685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696301ea9632fd1%3A0x43adc5784632e90b!2sVolkovskoye%20Municipal%20Okrug%2C%20St%20Petersburg%2C%20192102!5e1!3m2!1sen!2sru!4v1667890634520!5m2!1sen!2sru
----
