--- a/package.json
+++ b/package.json
@@ -9,22 +9,22 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.19.1",
-    "@nuxt/content": "^2.2.2",
-    "@nuxt/image-edge": "1.0.0-27840416.dc1ed65",
+    "@nuxt/content": "^2.7.0",
+    "@nuxt/image": "rc",
     "@nuxtjs/eslint-config": "^12.0.0",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/tailwindcss": "^6.1.3",
     "@tailwindcss/typography": "^0.5.8",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.46.0",
-    "eslint": "^8.29.0",
-    "nuxt": "^3.0.0",
+    "eslint": "^8.43.0",
+    "nuxt": "^3.6.0",
     "nuxt-purgecss": "^2.0.0",
-    "sass": "^1.56.1",
-    "sass-loader": "^13.2.0",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.4",
-    "vue": "^3.2.45",
+    "sass": "^1.63.6",
+    "sass-loader": "^13.3.2",
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.1.3",
+    "vue": "^3.3.4",
     "vue-gtag": "^2.0.1"
   },
   "packageManager": "yarn@3.3.0"
