fix: remove spaces from images paths
Former-commit-id: cdbea436faa8d8369f319ff851019d8198ff5eb3

--- a/content/graves/ignatyeva.yml
+++ b/content/graves/ignatyeva.yml
@@ -10,5 +10,5 @@ buried:
     deathDate: 19.10.1984
 
 photos:
-  - path: 2022-11-08 15.12.21.jpg
+  - path: 2022-11-08_15.12.21.jpg
     caption: В этой могиле гробы захоронены по центру
