--- a/content/people/reksam.yml
+++ b/content/people/reksam.yml
@@ -20,10 +20,10 @@ photos:
     caption: Золотая Долина, 05.09.2020
   - path: IMG_6640.jpeg
     caption: Зеленогорск, 10.10.2020
-  - path: 2020-03-09 13-42-27.jpeg
+  - path: 2020-03-09_13-42-27.jpeg
     caption: "09.03.2020"
   - path: 2b9011a5-1aca-4397-ae62-74b6b19ce259.jpeg
-  - path: 2020-03-09 13-42-47.jpeg
+  - path: 2020-03-09_13-42-47.jpeg
     caption: "09.03.2020"
   - path: IMG_0072.jpeg
     caption: 27.02.2021
@@ -33,5 +33,5 @@ photos:
     caption: Где-то в Финляндии, 06.07.2005
   - path: IMG_0303.jpeg
     caption: На пароме, вероятно, у Таллина, 12.01.2008
-  - path: photo_2022-05-17 13.59.22.jpeg
+  - path: photo_2022-05-17_13.59.22.jpeg
     caption: КПП Чарли, Берлин, 14.08.2004
