fix: buried structure

--- a/content/graves/ignatyeva.yml
+++ b/content/graves/ignatyeva.yml
@@ -2,10 +2,10 @@ title: Могила Игнатьевых
 graveyard: ohta
 
 buried:
-  - name: Игнатьева Анна Андреевна
+  - title: Игнатьева Анна Андреевна
     birthDate: 16.09.1925
     deathDate: 03.09.2015
-  - name: Игнатьева Мария Константиновна
+  - title: Игнатьева Мария Константиновна
     birthDate: 05.10.1912
     deathDate: 19.10.1984
 
