--- a/content/graves/newwolf.yml
+++ b/content/graves/newwolf.yml
@@ -2,13 +2,13 @@ title: Могила Ванюковых
 graveyard: newwolf
 
 buried:
-  - name: Ванюкова Анастасия Сергеевна
+  - title: Ванюкова Анастасия Сергеевна
     birthDate: 07.01.1900
     deathDate: 23.05.1970
-  - name: Ванюков Борис Владимирович
+  - title: Ванюков Борис Владимирович
     birthDate: 13.02.1927
     deathDate: 09.07.2002
-  - name: Ванюков Анатолий Владимирович
+  - title: Ванюков Анатолий Владимирович
     birthDate: 15.04.1928
     deathDate: 05.11.2015
 
