--- a/content/graves/vanyukova.yml
+++ b/content/graves/vanyukova.yml
@@ -2,10 +2,10 @@ title: Могила Ванюковых
 graveyard: ohta
 
 buried:
-  - name: Ванюкова Нина Александровна
+  - title: Ванюкова Нина Александровна
     birthDate: 02.12.1934
     deathDate: 07.03.2018
-  - name: Игнатьев Александр Андреевич
+  - title: Игнатьев Александр Андреевич
     birthDate: 15.06.1910
     deathDate: 05.07.1976
 
